# MLinvitroTox

./: .gitattributes  .gitignore  README.md  pyproject.toml
data/input/hrms_massbank/: massbank_unique_guids.csv
data/input/invitro/: Chemical_List_ToxCast_invitroDB_v4_1-2024-04-29.csv  assay_overview_selected.csv  ice_reference_file_mechtargets_aeid.csv
data/input/sirius/: sirius_training_structures_positive-mode_inchi_dtxsid.csv
data/processed/chemical_fingerprints/: application_sirius-pred-fps.parquet  training_true-fps.parquet  validation_sirius-pred-fps.parquet  validation_true-fps.parquet
data/processed/hrms_massbank/: massbank_GUID-DTXSID.csv  massbank_published-data_complete.csv  massbank_published-data_smiles.csv  massbank_validation_predfps_dtxsid.csv
src/mlinvitrotox/: __init__.py  constants.py
src/mlinvitrotox/apply/: loadfromstructure.py  runmodels.py
src/mlinvitrotox/train/: processinputdata.py
src/mlinvitrotox/utils/: get_predicted_fps.py  validate_massbank.py
